--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,39 +1,54 @@
-<!DOCTYPE html>
+<<!DOCTYPE html>
 <html lang="en">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>MVC Tech Blog</title>
+  <title>Just Tech</title>
+  <!-- CSS only -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
   <link rel="stylesheet" href="/stylesheets/style.css">
 </head>
 
 <body>
-  <div class="wrapper">
-      <header class="hero">
-          <div>
-            <nav class"nav">
-                    <a class="link" href="/">Home</a>
-                    <a class="link" href="/dashboard">Dashboard</a>
-                    {{#if loggedIn}}
-                    <a class="link" href="/" id="logout">Logout</a>
-                    {{else}}
-                    <a class="link" href="/login">Login</a>
-                    {{/if}}
-                </nav>          
-          </div>
-
-          <h1 class="app-title"><i class="fab "></i>The Tech Blog</h1>
-      </header>
-
-    <main>
+  <div>
+    <header>
+      <h1 class="nav-item">
+        <a class="nav-link" href="/">Just Tech</a>
+      </h1>
+      <h3 class="nav-item">
+        {{#if loggedIn}}
+          <a class="nav-link" href="/dashboard">Your Dashboard</a>
+      </h3>
+      <nav class="nav-link">
+         <button id="logout" class="nav-link active">logout</button>
+        {{else}}
+         <a class="nav-link navbar-right" href="/login">login</a>
+        {{/if}}
+      </nav>
+    </header>
+    <main class="main-body">
       {{{ body }}}
     </main>
+    <footer class="nav justify-content-center">
+      <h3 class="nav-item">
+        <a class="nav-link" href="/">Just Tech</a>
+      </h3>
+      <h3 class="nav-item">
+        <a class="nav-link" href="https://github.com/roxyvaught">Roxanna Vaught</a>
+      </h3>
+      <h3 class="nav-item">
+        <a class="nav-link" href="https://https://github.com/roxyvaught/tech-blog">Blog Repo</a> 
+      </h3>
+      <h3 class="nav-item">
+        <a class="nav-link" href="mailto:roxanna.vaught@gmail.com">Email</a>
+      </h3>
+    </footer>
   </div>
 
-    {{#if loggedIn}}
-    <script src="/javascript/logout.js"></script>
-    {{/if}}
+  {{#if loggedIn}}
+  <script src="/javascript/logout.js"></script>
+  {{/if}}
 
 </body>
 
