--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -1,20 +1,20 @@
-{{> post-info post}}
-
+{{> post-info post }}
 {{#if loggedIn}}
-<div class="card">
-    <h3 class="card-header"></h3>
-    <form class="card-body comment-form" id="comment-form">
+<form class="comment-form">
+  <div>
+    <textarea id="comment-body" name="comment-body"></textarea>
+  </div>
 
-        <label class="form-label">Comment</label>
-        <input id="comment" name="comment-body" class="form-input" />
-
-        <button type="submit" class="btn">Submit</button>
-    </form>
-</div>
+  <div>
+    <button type="submit" class="submit-btn">add comment</button>
+    <button type="button" class="upvote-btn">upvote</button>
+  </div>
+</form>
 {{/if}}
 
-{{> comments post.comments}}
+{{> comments post.comments }}
 
 {{#if loggedIn}}
 <script src="/javascript/comment.js"></script>
+<script src="/javascript/upvote.js"></script>
 {{/if}}
