--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Just Tech</title>
+  <title>Tech Blog</title>
   <!-- CSS only -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
   <link rel="stylesheet" href="/stylesheets/style.css">
@@ -38,10 +38,10 @@
         <a class="nav-link" href="https://github.com/roxyvaught">Roxanna Vaught</a>
       </h3>
       <h3 class="nav-item">
-        <a class="nav-link" href="https://https://github.com/roxyvaught/tech-blog">Blog Repo</a> 
+        <a class="nav-link" href="https://github.com/krrodriguez26/Tech-Blog">Blog Repo</a> 
       </h3>
       <h3 class="nav-item">
-        <a class="nav-link" href="mailto:roxanna.vaught@gmail.com">Email</a>
+        <a class="nav-link" href="mailto:katrrodriguez26@gmail.com">Email</a>
       </h3>
     </footer>
   </div>
