new edit to repo

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,7 +14,7 @@
   <div>
     <header>
       <h1 class="nav-item">
-        <a class="nav-link" href="/">Just Tech</a>
+        <a class="nav-link" href="/">Tech Blog</a>
       </h1>
       <h3 class="nav-item">
         {{#if loggedIn}}
@@ -32,10 +32,10 @@
     </main>
     <footer class="nav justify-content-center">
       <h3 class="nav-item">
-        <a class="nav-link" href="/">Just Tech</a>
+        <a class="nav-link" href="/">Tech Blog</a>
       </h3>
       <h3 class="nav-item">
-        <a class="nav-link" href="https://github.com/roxyvaught">Roxanna Vaught</a>
+        <a class="nav-link" href="https://github.com/krrodriguez26">Kathy Rodriguez</a>
       </h3>
       <h3 class="nav-item">
         <a class="nav-link" href="https://github.com/krrodriguez26/Tech-Blog">Blog Repo</a> 
